# hcasm

./: .gitignore  .nfs0000000062eca81000004720  HCasm.hs  HCdasm.hs  LICENSE  Readme.md  hcasm.cabal  test.c16  test.hs
HC/: .nfs00000000840c30ec00004723  Ops.hs
